--- a/src/components/Products/ui/ProductsFilter/ProductsFilter.css
+++ b/src/components/Products/ui/ProductsFilter/ProductsFilter.css
@@ -1,5 +1,4 @@
 .ProductsFilter {
-  width: 20%;
   flex-shrink: 0;
   padding: 20px;
   margin: 0 20px;
