--- a/src/components/Products/ui/ProductsList/ProductsList.css
+++ b/src/components/Products/ui/ProductsList/ProductsList.css
@@ -1,14 +1,15 @@
 .products__list_wrapper {
   position: relative;
+  width: 100%;
 }
 .products__list {
   display: grid;
-  gap: 25px;
+  gap: 20px;
   padding: 25px;
   padding-top: 10px;
   grid-template-columns: repeat(4, 1fr);
   grid-auto-rows: max-content;
-  width: 100%;
+
   min-height: 100vh;
 }
 .products__list_header {
@@ -20,11 +21,6 @@
   z-index: 10;
   width: 100%;
   background: var(--background-primary);
-}
-
-.products__list_card_empty {
-  width: 320px;
-  min-width: 150px;
 }
 
 @media (max-width: 980px) {
